# Makefile-Example

./: README.md  configure.ac  main.h
Makefile/: GNUmakefile.am  automotive.h  automotiveA.cc  automotiveB.cc  configure.ac
sub_Makefiles/: GNUmakefile.am  build.sh  configure.ac  main.cc
sub_Makefiles/sw/body/: GNUmakefile.am
sub_Makefiles/sw/body/inc/: bodyModule.h  bodyService.h
sub_Makefiles/sw/body/src/: bodyModule.cc  bodyService1.cc  bodyService2.cc  bodyService3.cc
sub_Makefiles/sw/electric/: GNUmakefile.am
sub_Makefiles/sw/electric/inc/: bodyElectric.h  commonElectric.h  engineElectric.h  sensorElectric.h
sub_Makefiles/sw/electric/src/: bodyElectric.cc  commonElectric.cc  engineElectric.cc  sensorElectric.cc
